# crobot_mainboard

./: .clangd  .gitignore  .mxproject  Makefile  crobot_mainboard.ioc  host_com_protocol.md
Core/Inc/: dprintf.h  stm32f4xx_it.h
Core/Src/: dprintf.c  gpio.c  main.c  stm32f4xx_it.c
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c
USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c
User/include/: battery_voltage.h  crobot_atomic.h  crobot_debug.h  host_com.h  modbus_rtu.h  odometry.h  ps2.h  swsr_queue.h  ultrasonic.h  vel_mux.h  velocity.h
User/include/kinematics_impl/: kinematics_4mec.h
User/src/: battery_voltage.c  crobot.c  crobot_debug.c  host_com.c  icm42605.c  kinematics.c  modbus_rtu.c  ps2.c  swsr_queue.c  ultrasonic.c  vel_mux.c
User/src/kinematics_impl/: kinematics_2wd.c  kinematics_4wd.c
device/board/crobot/: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields
device/board/crobot/stm32f405_crobot/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board
device/board/crobot/stm32f405_crobot/hcs/: BUILD.gn
device/board/crobot/stm32f405_crobot/liteos_m/: BUILD.gn  STM32F405RGTx_FLASH.ld  config.gni
device/board/crobot/stm32f405_crobot/liteos_m/Inc/: stm32f4xx_it.h
device/board/crobot/stm32f405_crobot/liteos_m/Src/: dprintf.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
device/board/crobot/stm32f405_crobot/liteos_m/core/: BUILD.gn  startup_stm32f405xx.s
device/board/crobot/stm32f405_crobot/liteos_m/core/include/: print.h  spi.h  stm32f4xx_it.h  usart.h
device/board/crobot/stm32f405_crobot/liteos_m/core/src/: dprintf.c  gpio.c  main.c  print.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
device/board/crobot/stm32f405_crobot/liteos_m/include/core/: stm32f4xx_it.h  usart.h
device/board/crobot/stm32f405_crobot/liteos_m/include/user/: bus_serial.h  data_com.h  host_com.h  icm42605.h  kinematics.h  modbus_rtu.h  ps2.h  s_queue.h  share_ware.h  vel_mux.h
device/board/crobot/stm32f405_crobot/liteos_m/src/core/: dma.c  gpio.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
device/board/crobot/stm32f405_crobot/liteos_m/src/user/: bus_serial.c  crobot_tasks.c  data_com.c  host_com.c  icm42605.c  kinematics.c  modbus_rtu.c  os_task.c  ps2.c  s_queue.c  share_ware.c  vel_mux.c
device/board/crobot/stm32f405_crobot/liteos_m/usb_device/: BUILD.gn
device/board/crobot/stm32f405_crobot/liteos_m/usb_device/app/: usb_device.c  usbd_cdc_if.c
device/board/crobot/stm32f405_crobot/liteos_m/user/: BUILD.gn
device/board/crobot/stm32f405_crobot/liteos_m/user/include/: bumper.h  bus_serial.h  crobot.h  crobot_tasks.h  host_com.h  icm42605.h  icm42605_reg.h  kinematics.h  kinematics_impl.h  mem_pool.h  modbus_rtu.h  ps2.h  swsr_queue.h  ultrasonic.h  vel_mux.h
device/board/crobot/stm32f405_crobot/liteos_m/user/include/kinematics_impl/: kinematics_2wd.h  kinematics_3wo.h  kinematics_4wd.h
device/board/crobot/stm32f405_crobot/liteos_m/user/src/: battery_voltage.c  bumper.c  bus_serial.c  crobot.c  crobot_tasks.c  host_com.c  icm42605.c  kinematics.c  kinematics_2wd.c  kinematics_3wo.c  kinematics_4wd.c  mem_pool.c  modbus_rtu.c  ps2.c  s_queue.c  swsr_queue.c  ultrasonic.c  vel_mux.c
device/board/crobot/stm32f405_crobot/liteos_m/user/src/kinematics_impl/: kinematics_2wd.c  kinematics_3wo.c  kinematics_4mec.c  kinematics_4wd.c
device/soc/stm32/: BUILD.gn  Kconfig.liteos_m.soc
device/soc/stm32/stm32f4xx/: BUILD.gn  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.defconfig.stm32f4xx  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
device/soc/stm32/stm32f4xx/sdk/: BUILD.gn  target_config.h
