import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
    sources = [
        "startup_stm32f405xx.s",
        "Src/dprintf.c",
        "Src/gpio.c",
        "Src/main.c",
        "Src/stm32f4xx_hal_msp.c",
        "Src/stm32f4xx_it.c",
        "Src/system_stm32f4xx.c",
        "Src/usart.c"
    ]
    include_dirs = [
        "Inc"
    ]
}

config("public") {
    ldflags = [
        "-Wl,-T" + rebase_path("STM32F405RGTx_FLASH.ld"),
        "-Wl,-u_printf_float",
    ]
    libs = [
        "c",
        "m",
        "nosys",
    ]
}
