import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
    sources = [
        "startup_stm32f405xx.s",
        "src/core/dma.c",
        "src/core/dprintf.c",
        "src/core/gpio.c",
        "src/core/i2c.c",
        "src/core/main.c",
        "src/core/stm32f4xx_hal_msp.c",
        "src/core/stm32f4xx_hal_timebase_tim.c",
        "src/core/stm32f4xx_it.c",
        "src/core/system_stm32f4xx.c",
        "src/core/usart.c",
        "src/user/crobot_tasks.c",
        "src/user/data_com.c",
        "src/user/icm42605.c",
        "src/user/s_queue.c",
        "src/user/share_ware.c",
    ]
    include_dirs = [
        "include/core",
        "include/user"
    ]
}

config("public") {
    ldflags = [
        "-Wl,-T" + rebase_path("STM32F405RGTx_FLASH.ld"),
        "-Wl,-u_printf_float",
    ]
    libs = [
        "c",
        "m",
        "nosys",
    ]
}
