import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
    sources = [
        "startup_stm32f405xx.s",
        "src/dprintf.c",
        "src/gpio.c",
        "src/main.c",
        "src/print.c",
        "src/stm32f4xx_hal_msp.c",
        "src/stm32f4xx_hal_timebase_tim.c",
        "src/stm32f4xx_it.c",
        "src/system_stm32f4xx.c"
    ]
}

config("public") {
    include_dirs = [
        "include"
    ]
    ldflags = [
        "-Wl,-T" + rebase_path("STM32F405RGTx_FLASH.ld"),
        "-Wl,-u_printf_float",
    ]
    libs = [
        "c",
        "m",
        "nosys",
    ]
}
