import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
    sources = [
        "app/usb_device.c",
        "app/usbd_cdc_if.c",
        "app/usbd_desc.c",
        "target/usbd_conf.c"
    ]
}

config("public") {
    include_dirs = [
        "app",
        "target"
    ]
}
