import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
    sources = [
        "src/bumper.c",
        "src/crobot_tasks.c",
        "src/host_com.c",
        "src/icm42605.c",
        "src/kinematics.c",
        "src/mem_pool.c",
        "src/modbus_rtu.c",
        "src/ps2.c",
        "src/swsr_queue.c",
        "src/ultrasonic.c",
        "src/vel_mux.c"
    ]

    if (defined(LOSCFG_ROBOT_BASE_2WD)) {
        sources += [
            "src/kinematics_2wd.c"
        ]
    }

    if (defined(LOSCFG_ROBOT_BASE_4WD)) {
        sources += [
            "src/kinematics_4wd.c"
        ]
    }

    if (defined(LOSCFG_ROBOT_BASE_3WO)) {
        sources += [
            "src/kinematics_3wo.c"
        ]
    }
}

config("public") {
    include_dirs = [
        "include"
    ]
}
