import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
    sources = [
        "src/battery_voltage.c",
        "src/bumper.c",
        "src/crobot.c",
        "src/host_com.c",
        "src/icm42605.c",
        "src/kinematics.c",
        "src/mem_pool.c",
        "src/modbus_rtu.c",
        "src/ps2.c",
        "src/swsr_queue.c",
        "src/ultrasonic.c",
        "src/vel_mux.c"
    ]

    sources += [
        "src/kinematics_impl/kinematics_2wd.c",
        "src/kinematics_impl/kinematics_3wo.c",
        "src/kinematics_impl/kinematics_4wd.c"
    ]

    include_dirs = [
        "include"
    ]
}
